force-app/main/default/objects/Sales_Rep_Profile__c/fields/Monthly_Opportunities_Added_amt__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Opportunities_Added_amt__c</fullName>
    <description>This field stores the amount of qualified opp at the end of the month + the amount of the qualified opp moved to next month + the amount of the qualified opps that are lost in the current month</description>
    <formula>IF(Monthly_Close_Rate__c &gt; 0,Monthly_Quota_Revenue__c / Monthly_Close_Rate__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly funnel $ amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>