force-app/main/default/objects/Sales_Rep_Profile__c/fields/Monthly_QO_added__c.field-meta.xml
<CustomField>
    <fullName>Monthly_QO_added__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is counter for monthly QO added</description>
    <label>Monthly QO added</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>