force-app/main/default/objects/Sales_Rep_Profile__c/fields/Monthly_quota__c.field-meta.xml
<CustomField>
    <fullName>Monthly_quota__c</fullName>
    <description>Stores the quota for the month</description>
    <label>Monthly quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>