force-app/main/default/objects/Sales_Rep_Profile__c/fields/Monthly_Wins__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Wins__c</fullName>
    <formula>Annual_Win_Quota__c / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Wins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>