force-app/main/default/objects/Sales_Rep_Profile__c/fields/New_or_Tenured__c.field-meta.xml
<CustomField>
    <fullName>New_or_Tenured__c</fullName>
    <description>Indicates if the rep has completed 12 months in the company. If yes, the field is &apos;Tenured&apos;. If not, it is populated as &apos;New&apos;</description>
    <formula>IF( (((YEAR(TODAY()) - YEAR(Rep_Start_Date__c) - 1) *12) + (12 - MONTH(Rep_Start_Date__c) +1) + MONTH(TODAY())) &gt; 12, &apos;Tenured&apos;, &apos;New&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New or Tenured?</label>
    <type>Text</type>
</CustomField>