force-app/main/default/objects/Sales_Rep_Profile__c/fields/Number_of_meetings_per_quarter__c.field-meta.xml
<CustomField>
    <fullName>Number_of_meetings_per_quarter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of meetings per quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>