force-app/main/default/objects/Sales_Rep_Profile__c/fields/Number_of_meetings_Rolling_12_months__c.field-meta.xml
<CustomField>
    <fullName>Number_of_meetings_Rolling_12_months__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of meetings Rolling 12 months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>