force-app/main/default/objects/Sales_Rep_Profile__c/fields/Number_of_meetings_YTD_percentage__c.field-meta.xml
<CustomField>
    <fullName>Number_of_meetings_YTD_percentage__c</fullName>
    <formula>IF(Goal_of_monthly_meetings__c &gt; 0, Number_of_meetings_YTD__c /( Goal_of_monthly_meetings__c *  Current_Fiscal_Months__c ), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of meetings YTD percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>