force-app/main/default/objects/Sales_Rep_Profile__c/fields/of_annual_qualified_opptys__c.field-meta.xml
<CustomField>
    <fullName>of_annual_qualified_opptys__c</fullName>
    <description>Duplicate (of_annual_opptys_req_to_achieve_quota)</description>
    <formula>IF(X12_Month_Rolling_Opportunity_Close_Rate__c != 0 ,
of_wins_to_achieve_annual_quota__c/X12_Month_Rolling_Opportunity_Close_Rate__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of annual qualified opptys req</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>