force-app/main/default/objects/Sales_Rep_Profile__c/fields/of_daily_leads_to_achieve_quota__c.field-meta.xml
<CustomField>
    <fullName>of_daily_leads_to_achieve_quota__c</fullName>
    <description>No of monthly leads to achieve quota / 22</description>
    <formula>of_monthly_leads_to_achieve_quota__c / 22</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of daily leads to achieve quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>