force-app/main/default/objects/Sales_Rep_Profile__c/fields/of_leads_for_1_win__c.field-meta.xml
<CustomField>
    <fullName>of_leads_for_1_win__c</fullName>
    <description>No of leads for 1 qualified oppty / 12 month rolling win rate</description>
    <formula>IF(X12_Month_Rolling_Opportunity_Close_Rate__c != 0, 
of_leads_for_1_qualified_oppty__c/X12_Month_Rolling_Opportunity_Close_Rate__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of leads for 1 win</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>