force-app/main/default/objects/Sales_Rep_Profile__c/fields/of_monthly_leads_to_achieve_quota__c.field-meta.xml
<CustomField>
    <fullName>of_monthly_leads_to_achieve_quota__c</fullName>
    <description>No of leads to generate one win * No of wins to achieve monthly quota</description>
    <formula>of_leads_for_1_win__c * of_wins_to_achieve_monthly_quota__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of monthly leads to achieve quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>