force-app/main/default/objects/Sales_Rep_Profile__c/fields/of_monthly_qualified_opptys__c.field-meta.xml
<CustomField>
    <fullName>of_monthly_qualified_opptys__c</fullName>
    <description>Annual qualified opptys / 12</description>
    <formula>of_annual_qualified_opptys__c / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of monthly qualified opptys</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>