force-app/main/default/objects/Sales_Rep_Profile__c/fields/of_quarterly_qualified_opptys__c.field-meta.xml
<CustomField>
    <fullName>of_quarterly_qualified_opptys__c</fullName>
    <description>Annual qualified opptys / 4</description>
    <formula>of_annual_qualified_opptys__c / 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of quarterly qualified opptys</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>