force-app/main/default/objects/Sales_Rep_Profile__c/fields/of_quartly_opptys_req_to_achieve_quota__c.field-meta.xml
<CustomField>
    <fullName>of_quartly_opptys_req_to_achieve_quota__c</fullName>
    <formula>IF(X12_Month_Rolling_Opportunity_Close_Rate__c  != 0,
 of_wins_to_achieve_annual_quota__c / (X12_Month_Rolling_Opportunity_Close_Rate__c  * 4)
, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of quartly QO req to achieve quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>