force-app/main/default/objects/Sales_Rep_Profile__c/fields/of_wins_to_achieve_monthly_quota__c.field-meta.xml
<CustomField>
    <fullName>of_wins_to_achieve_monthly_quota__c</fullName>
    <description>Monthly quota / Average selling price</description>
    <formula>IF(X12_Month_Average_Selling_Price__c != 0,
 Annual_Quota_Amount__c / (12 *  X12_Month_Average_Selling_Price__c),
 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of wins to achieve monthly quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>