force-app/main/default/objects/Sales_Rep_Profile__c/fields/On_boarding_Date__c.field-meta.xml
<CustomField>
    <fullName>On_boarding_Date__c</fullName>
    <label>On boarding Date</label>
    <type>Date</type>
</CustomField>