force-app/main/default/objects/Sales_Rep_Profile__c/fields/Projected_Annualized_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Projected_Annualized_Revenue__c</fullName>
    <description>Projected Annualized Revenue
For new hires:Formula = (Sum of monthly revenues / no. of months)*12
For Tenured: Formula = (YTD Revenue/Fiscal Month) * 12</description>
    <label>Projected Annualized Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>