force-app/main/default/objects/Sales_Rep_Profile__c/fields/Q1_Quota_Amount__c.field-meta.xml
<CustomField>
    <fullName>Q1_Quota_Amount__c</fullName>
    <description>Month 1 quota + Month 2 quota + Month 3 quota</description>
    <formula>Month_1_Quota_Amount__c + Month_2_Quota_Amount__c + Month_3_Quota_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q1 Quota Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>