force-app/main/default/objects/Sales_Rep_Profile__c/fields/Q2_Quota_Amount__c.field-meta.xml
<CustomField>
    <fullName>Q2_Quota_Amount__c</fullName>
    <description>Month 4 quota + Month 5 quota + Month 6 quota</description>
    <formula>Month_4_Quota_Amount__c + Month_5_Quota_Amount__c + Month_6_Quota_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q2 Quota Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>