force-app/main/default/objects/Sales_Rep_Profile__c/fields/Q3_Quota_Amount__c.field-meta.xml
<CustomField>
    <fullName>Q3_Quota_Amount__c</fullName>
    <description>Month 7 quota + Month 8 quota + Month 9 quota</description>
    <formula>Month_7_Quota_Amount__c + Month_8_Quota_Amount__c + Month_9_Quota_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q3 Quota Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>