force-app/main/default/objects/Sales_Rep_Profile__c/fields/Quarterly_Average_Win_Size__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Average_Win_Size__c</fullName>
    <description>Quarterly Average $ Win Size (Currency) = Quarterly_Quota_Revenue__c  /  Quarterly_opp_won__c</description>
    <formula>IF(Quarterly_opp_won__c &gt; 0, Quarterly_Quota_Revenue__c  /  Quarterly_opp_won__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarterly Average $ Win Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>