force-app/main/default/objects/Sales_Rep_Profile__c/fields/Quarterly_Average_Win_Size_percentage__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Average_Win_Size_percentage__c</fullName>
    <formula>IF(Goal_12m_Avg_Selling_Price__c &gt; 0, Quarterly_Average_Win_Size__c / Goal_12m_Avg_Selling_Price__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarterly Average $ Win Size percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>