force-app/main/default/objects/Sales_Rep_Profile__c/fields/Quarterly_Close_Rate__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Close_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is the division of the amount of all the opp added whose close date in this quarter by the amount of whose colse date is moved to next quarter</description>
    <label>Quarterly $ Close Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>