force-app/main/default/objects/Sales_Rep_Profile__c/fields/Quarterly_Close_Rate_percentage__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Close_Rate_percentage__c</fullName>
    <description>Stores the quarterly close rate in percentage form against the goal</description>
    <formula>IF(Goal_12m_rolling_amt_close_rate__c &gt; 0, Quarterly_Close_Rate__c / Goal_12m_rolling_amt_close_rate__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarterly $ Close Rate percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>