force-app/main/default/objects/Sales_Rep_Profile__c/fields/Quarterly_Funnel_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Funnel_Opportunities__c</fullName>
    <description>This field stores the count of qualified opp at the end of the Quarter+ the count of the qualified opp moved to next Quarter+ the count of the qualified opps that are lost in the current Quarter</description>
    <formula>IF(Quarterly_Opportunity_Close_Rate__c  &gt; 0,Quarterly_opp_won__c / Quarterly_Opportunity_Close_Rate__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarterly Funnel Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>