force-app/main/default/objects/Sales_Rep_Profile__c/fields/Quarterly_Lead_to_Opp_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Lead_to_Opp_Conversion_Rate__c</fullName>
    <description>Quarterly QO conversion rate</description>
    <formula>IF(Quarterly_Lead_Added__c &gt; 0, Quarterly_QO_added_Quantitative__c / Quarterly_Lead_Added__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarterly Lead to Opp Conversion Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>