force-app/main/default/objects/Sales_Rep_Profile__c/fields/Quarterly_lost_QO_Amt__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_lost_QO_Amt__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field store the Dollar value of the closed lost QO in the current Quarter</description>
    <label>Quarterly lost QO Amt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>