force-app/main/default/objects/Sales_Rep_Profile__c/fields/Quarterly_Opp_added_to_Qualif_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Opp_added_to_Qualif_Percentage__c</fullName>
    <formula>IF(Goal_of_quartly_opptys_added_to_funnel__c &gt; 0, Quarterly_QO_added_Quantitative__c  / Goal_of_quartly_opptys_added_to_funnel__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarterly Opp added to Qualif Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>