force-app/main/default/objects/Sales_Rep_Profile__c/fields/Quarterly_opp_won__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_opp_won__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quarterly opp won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>