force-app/main/default/objects/Sales_Rep_Profile__c/fields/Quarterly_Opportunitie_Closed_percentage__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Opportunitie_Closed_percentage__c</fullName>
    <formula>IF(Goal_of_wins_to_achieve_quartly_quota__c &gt; 0, Quarterly_opp_won__c / Goal_of_wins_to_achieve_quartly_quota__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarterly Opportunitie Closed percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>