force-app/main/default/objects/Sales_Rep_Profile__c/fields/Quarterly_Opportunities_Added_amt__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Opportunities_Added_amt__c</fullName>
    <description>This field stores the amount of qualified opp at the end of the Quarter+ the amount of the qualified opp moved to next Quarter+ the amount of the qualified opps that are lost in the current Quarter</description>
    <formula>IF(Quarterly_Close_Rate__c &gt;0, Quarterly_Quota_Revenue__c / Quarterly_Close_Rate__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarterly funnel $ amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>