force-app/main/default/objects/Sales_Rep_Profile__c/fields/Quarterly_Opportunity_Quota__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Opportunity_Quota__c</fullName>
    <formula>Annual_Opportunity_Quota__c / 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarterly Opportunity Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>