force-app/main/default/objects/Sales_Rep_Profile__c/fields/Quarterly_Quota__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Quota__c</fullName>
    <description>Stores the quarterly quota</description>
    <label>Quarterly Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>