force-app/main/default/objects/Sales_Rep_Profile__c/fields/Quarterly_Quota_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Quota_Revenue__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quarterly Quota Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>