force-app/main/default/objects/Sales_Rep_Profile__c/fields/Quartile__c.field-meta.xml
<CustomField>
    <fullName>Quartile__c</fullName>
    <formula>IF(YTDQP__c&gt;=1,&quot;Outstanding&quot;,
IF(YTDQP__c&gt;0.8,&quot;Strong&quot;,
IF(YTDQP__c&gt;0.5,&quot;Average&quot;,
IF(YTDQP__c&gt;0.2,&quot;UnderPerforming&quot;,&quot;Needs Improvement&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quartile</label>
    <type>Text</type>
</CustomField>