force-app/main/default/objects/Sales_Rep_Profile__c/fields/Rep_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Rep_Start_Date__c</fullName>
    <description>Stores the created date of the user record associated with the sales profile</description>
    <label>Sales Rep Start Date</label>
    <type>Date</type>
</CustomField>