force-app/main/default/objects/Sales_Rep_Profile__c/fields/Role_change_date__c.field-meta.xml
<CustomField>
    <fullName>Role_change_date__c</fullName>
    <description>Date when the role of the sales profile was changed</description>
    <label>Role change date</label>
    <type>Date</type>
</CustomField>