force-app/main/default/objects/Sales_Rep_Profile__c/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the manager of the sales representative</description>
    <label>Sales Manager</label>
    <referenceTo>Sales_Rep_Profile__c</referenceTo>
    <relationshipLabel>Sales Rep Profiles</relationshipLabel>
    <relationshipName>Sales_Rep_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>