force-app/main/default/objects/Sales_Rep_Profile__c/fields/Sales_Rep_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Start_Date__c</fullName>
    <description>Rep&apos;s Start date (to determine tenure) This field is no longer used as we cannot access the User record created date in a formula field. We have created a new field populated via a trigger.</description>
    <formula>User_Record_Name__r.Contact.CreatedDate</formula>
    <label>BAD Sales Rep Start Date</label>
    <type>Date</type>
</CustomField>